--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,18 @@ body {
     text-wrap: balance;
   }
 }
+
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgb(83, 83, 83);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #AAA; 
+  border-radius: 5px;
+  border: none;
+}
